Fixed alignment of store elements to handle scrolling.

--- a/www.bttbalumni.ca/css/bttbAlumni.css
+++ b/www.bttbalumni.ca/css/bttbAlumni.css
@@ -18,7 +18,7 @@ body
     padding:     5em 1em 1em 16em;
     font-size:   1em;
 	height:		 100%;
-	overflow:    hidden;
+	overflow:    auto;
     background:  url('/Images/background.jpg') no-repeat top left;
 }
 b
@@ -170,11 +170,13 @@ p
       |            |                                               |
       |            |                                               |
       +------------+-----------------------------------------------+
+
+  The "content" area is scrollable, the others are fixed.
 */
 
 #page
 {
-    position:   fixed;
+    position:   absolute;
     top:        0px;
     left:       0px;
 }
@@ -184,8 +186,6 @@ p
     position:   absolute;
     top:        5px;
     left:       5px;
-    width:      123px;
-    height:     110px;
 }
 
 #mainTitle
@@ -193,9 +193,6 @@ p
     position:  absolute;
     top:       5px;
     left:      140px;
-    width:     300px;
-    height:    126px;
-	z-index:   10;
 }
 
 #subTitle
@@ -203,9 +200,6 @@ p
     position:  absolute;
     top:       20px;
     left:      460px;
-    width:     300px;
-    height:    57px;
-	z-index:   10;
 }
 
 #content
@@ -213,7 +207,8 @@ p
     position:   absolute;
     top:        130px;
     left:       140px;
-	overflow:	auto;
+	width:		auto;
+	height:		auto;
 }
 
 #navigation
